[package]
name = "gossip-glomers-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.8"
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"
uuid = { version = "1.3.0", features = ["v4", "fast-rng"] }
